--- a/index.html
+++ b/index.html
@@ -32,5 +32,8 @@
         </fieldset>
 
     </body>
+    <script
+    src="/node_modules/socket.io/client-dist/socket.io.js"
+    ></script>
 
 </html>
