--- a/index.html
+++ b/index.html
@@ -1,39 +1,55 @@
 <html>
-    <head>
-        <title>Socket.IO</title>
-        <style>
-            #div1
-            {
-                background-color: skyblue;
-                width: 100%;
-                height: 200px;
-                overflow: auto;
-                border-radius: 5px;
 
-            }
-            #connectionStatus
-            {
-                font-weight: bold;
-            }
-        </style>
-    </head>
-    <body>
-        <h4>Socket.IO</h4>
-        <input type="text" placeholder="Username" id="txtUsername">
-        <input type="button" value="Connect" id="btnConnect">
-        <span id="connectionStatus"></span>
-        <div id="div1">
+<head>
+    <title>Socket.IO</title>
+    <style>
+        #div1 {
+            background-color: skyblue;
+            width: 100%;
+            height: 200px;
+            overflow: auto;
+            border-radius: 5px;
 
-        </div>
-        <fieldset>
-            <legend>New Message</legend>
-            <input type="text" id="txtMessage" placeholder="Message">
-            <input type="submit" value="btnSubmit">
-        </fieldset>
+        }
 
-    </body>
-    <script
-    src="/node_modules/socket.io/client-dist/socket.io.js"
-    ></script>
+        #connectionStatus {
+            font-weight: bold;
+        }
+    </style>
+</head>
+
+<body>
+    <h4>Socket.IO</h4>
+    <input type="text" placeholder="Username" id="txtUsername">
+    <input type="button" value="Connect" id="btnConnect">
+    <span id="connectionStatus"></span>
+    <div id="div1">
+
+    </div>
+    <fieldset>
+        <legend>New Message</legend>
+        <input type="text" id="txtMessage" placeholder="Message">
+        <input type="submit" id="btnSubmit" value="btnSubmit">
+    </fieldset>
+
+
+    <script src="/node_modules/socket.io/client-dist/socket.io.js"></script>
+
+    <script>
+        document.getElementById("btnConnect").addEventListener("click", function () {
+            var server = io.connect("ws://localhost:9090");
+
+            server.on("connect", function () {
+                console.log("connected");
+            });
+
+            document.getElementById("btnSubmit").addEventListener("click", function () {
+                server.emit("clientmessage");
+            });
+
+        });
+    </script>
+
+</body>
 
 </html>
